# puffer

./: .gitignore  Cargo.toml  index.html
apps/puffer-desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/puffer-desktop/src/: App.svelte  app.css  main.ts
apps/puffer-desktop/src-tauri/: Cargo.toml  hello.html  tauri.conf.json
apps/puffer-desktop/src-tauri/capabilities/: default.json
apps/puffer-desktop/src-tauri/src/: auth_data.rs  backend.rs  codex_app_server.rs  daemon_launcher.rs  dto.rs  dtos.rs  events.rs  files.rs  fs_watch.rs  git_actions.rs  lib.rs  lsp.rs  main.rs  pty.rs  repo_actions.rs  session_api.rs  session_data.rs  settings_data.rs  turn.rs  websocket.rs
apps/puffer-desktop/src-tauri/src/browser/: agent.rs  chrome.rs  devtools.rs  mod.rs  params.rs  tests.rs
apps/puffer-desktop/tests/: codex-playwright-mcp.spec.ts
crates/puffer-cli/: Cargo.toml
crates/puffer-cli/src/: auth_provider.rs  authflow.rs  benchmark_run.rs  cli_args.rs  command_surface.rs  daemon.rs  daemon_files.rs  daemon_fs_watch.rs  daemon_lsp.rs  daemon_pty.rs  desktop_api.rs  desktop_api_types.rs  main.rs  runner_selection.rs  subscriptions.rs  workflow_runtime.rs  workflows.rs
crates/puffer-cli/tests/: auth_custom_provider.rs  tmux_help.rs  (+3 more)
crates/puffer-config/: Cargo.toml
crates/puffer-connector-slack/: Cargo.toml
crates/puffer-core/: Cargo.toml  agent_catalog.rs  command.rs  command_helpers.rs  command_summary.rs  hooks.rs  lib.rs  memory.rs  model_preferences.rs  permissions.rs  plan_mode.rs  plans.rs  runner_adapter.rs  runtime.rs  runtime_resources.rs  skill_support.rs  state.rs  tool_names.rs  tooling.rs  workspace_paths.rs
crates/puffer-provider-mistral/: Cargo.toml
crates/puffer-provider-registry/: Cargo.toml
crates/puffer-remote-tools/: Cargo.toml  build.rs
crates/puffer-remote-tools/proto/: tool_runner.proto
crates/puffer-remote-tools/src/: client.rs  lib.rs  model.rs
crates/puffer-resources/: Cargo.toml
crates/puffer-subscriber-email/: Cargo.toml
crates/puffer-subscriber-email/src/: commands.rs  config.rs  events.rs  imap_poll.rs  lib.rs  run.rs  smtp_send.rs  state.rs
crates/puffer-subscriber-runtime/: Cargo.toml
crates/puffer-subscriber-runtime/src/: bus.rs  codec.rs  command.rs  event.rs  lib.rs  manifest.rs  supervisor.rs
crates/puffer-subscriber-telegram-user/: Cargo.toml
crates/puffer-subscriber-telegram-user/src/: client.rs  commands.rs  events.rs  lib.rs  login.rs  state.rs
crates/puffer-subscriptions/: Cargo.toml
crates/puffer-test-support/: Cargo.toml
crates/puffer-tool-runner/: Cargo.toml
crates/puffer-tool-runner/src/: lib.rs  main.rs  service.rs
crates/puffer-tools/: Cargo.toml
crates/puffer-tui/: Cargo.toml
crates/puffer-workflow/: Cargo.toml
crates/puffer-workflow/src/: cron.rs  lib.rs  runner.rs  schema.rs  store.rs
docs/architecture/: agent-loop.md
resources/agents/: explore.yaml  general-purpose.yaml  plan.yaml  statusline-setup.yaml  verification.yaml
resources/plugins/: puffer-builtins.yaml
resources/prompts/: init.yaml  plan-mode-exited.yaml  plan-mode-full.yaml  plan-mode-interview.yaml  plan-mode-reentry.yaml  plan-mode-sparse.yaml  plan-mode-subagent.yaml  pr-comments.yaml  review.yaml  security-review.yaml  statusline.yaml  system-base.yaml
resources/providers/: anthropic.yaml  cerebras.yaml  groq.yaml  kimi-coding.yaml  minimax-cn.yaml  minimax.yaml  mistral.yaml  ollama.yaml  openai.yaml  openrouter.yaml  vercel-ai-gateway.yaml  xai.yaml
resources/tools/: agent.yaml  ask_user_question.yaml  bash.yaml  brief.yaml  browser.yaml  claude_bash.yaml  claude_edit.yaml  claude_read.yaml  claude_write.yaml  config.yaml  email_configure.yaml  enter_plan_mode.yaml  exit_plan_mode.yaml  lsp.yaml  move_path.yaml  notebook_edit.yaml  powershell.yaml  read.yaml  remove_path.yaml  send_message.yaml  send_user_message.yaml  skill.yaml  sleep.yaml  structured_output.yaml  subscriber_install.yaml  subscriber_list.yaml  subscriber_scaffold.yaml  subscription_create.yaml  subscription_delete.yaml  subscription_list.yaml  subscription_pause.yaml  task_create.yaml  task_get.yaml  task_list.yaml  task_output.yaml  task_stop.yaml  task_update.yaml  telegram_login_start.yaml  telegram_login_submit_code.yaml  telegram_login_submit_password.yaml  (+4 more)
scripts/: bench-observe.sh  bench-run.sh
specs/puffer-cli/: 02.md
specs/puffer-core/: 02.md
ui/: README.md
(+328 files in other folders)
