[package]
name = "puffer-remote-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
puffer-tools = { path = "../puffer-tools" }
prost = "0.13"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build.workspace = true
