[package]
name = "puffer-tool-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "puffer-tool-runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
puffer-core = { path = "../puffer-core" }
puffer-remote-tools = { path = "../puffer-remote-tools" }
puffer-resources = { path = "../puffer-resources" }
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
tonic.workspace = true

[dev-dependencies]
tempfile.workspace = true
