[package]
name = "puffer-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.tauri-winres]

[features]
default = ["desktop-runtime"]
desktop-runtime = [
    "tauri/wry",
    "tauri/x11",
    "tauri/compression",
    "tauri/common-controls-v6",
    "tauri/dynamic-acl",
]

[lib]
name = "puffer_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
anyhow = "1.0.100"
puffer-config = { path = "../../../crates/puffer-config" }
puffer-session-store = { path = "../../../crates/puffer-session-store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tauri = { version = "2", default-features = false }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[workspace]
